# matti

./: .pylintrc  README.md  pyproject.toml
matti/: __init__.py  matti.py
tests/: test_matti.py
