[tool.poetry]
name = "matti"
version = "0.1.0"
description = "pattern match"
authors = ["sh1ma <in9lude@gmail.com>"]
repository = "https://github.com/sh1ma/matti"

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
